--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "Gonzalo Fredes",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
+    "mongodb": "^4.14.0",
     "mongoose": "^6.9.0",
     "mongoose-paginate-v2": "^1.7.1",
     "populate": "^5.0.1",
