--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Gonzalo Fredes",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
@@ -19,6 +20,8 @@
     "mongodb": "^4.14.0",
     "mongoose": "^6.9.0",
     "mongoose-paginate-v2": "^1.7.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "populate": "^5.0.1",
     "socket.io": "^4.5.4"
   },
