--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "populate": "^5.0.1",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "uuid": "^9.0.0"
   },
   "type": "commonjs"
 }
