--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   },
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0"
+  }
 }
