control loggers de errores

--- a/src/.env.production
+++ b/src/.env.production
@@ -3,3 +3,4 @@ PORT = Servidor de producción listo en puerto http://localhost:8080/
 MONGOURL = mongodb+srv://gonzafredes1:SQ3HgTEmJgPANS7K@pruebabackend.7gddxpl.mongodb.net/?retryWrites=true&w=majority
 ADMINNAME = adminCoder
 ADMINPASSWORD = 123456
+NODE_ENV = true
