--- a/src/.env.development
+++ b/src/.env.development
@@ -3,3 +3,7 @@ PORT = Servidor de desarrollo listo en puerto http://localhost:8080/
 MONGOURL = mongodb+srv://gonzafredes1:SQ3HgTEmJgPANS7K@pruebabackend.7gddxpl.mongodb.net/?retryWrites=true&w=majority
 ADMINNAME = adminCoder
 ADMINPASSWORD = 123456
+PERCISTENCE = FS
+CORREO = gonzafredes1@gmail.com
+CORREO_PASSWORD = vteqzjstpotgsxtb
+PRIVATE_KEY_JWT = jwtprivatekeyautorization+ 
