--- a/src/.env.production
+++ b/src/.env.production
@@ -4,3 +4,6 @@ MONGOURL = mongodb+srv://gonzafredes1:SQ3HgTEmJgPANS7K@pruebabackend.7gddxpl.mon
 ADMINNAME = adminCoder
 ADMINPASSWORD = 123456
 NODE_ENV = true
+CORREO = gonzafredes1@gmail.com
+CORREO_PASSWORD = vteqzjstpotgsxtb
+PRIVATE_KEY_JWT = jwtprivatekeyautorization+
