--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^4.14.0",
     "mongoose": "^6.9.0",
     "mongoose-paginate-v2": "^1.7.1",
+    "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "populate": "^5.0.1",
