Agrego testing con mocha y supertest

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   },
   "type": "commonjs",
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0"
+    "@faker-js/faker": "^7.6.0",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
