--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^4.14.0",
     "mongoose": "^6.9.0",
     "mongoose-paginate-v2": "^1.7.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
