--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "commander": "^10.0.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
@@ -32,6 +33,7 @@
     "passport-local": "^1.0.0",
     "populate": "^5.0.1",
     "socket.io": "^4.5.4",
+    "stripe": "^12.11.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0",
