--- a/src/.env.development
+++ b/src/.env.development
@@ -1,5 +1,6 @@
 ENVIRONMENT = development
-PORT = Servidor de desarrollo listo en puerto http://localhost:8080/
+# PORT = Servidor de desarrollo listo en puerto http://localhost:8080/
+# PORT = 8080
 MONGOURL = mongodb+srv://gonzafredes1:SQ3HgTEmJgPANS7K@pruebabackend.7gddxpl.mongodb.net/?retryWrites=true&w=majority
 ADMINNAME = adminCoder
 ADMINPASSWORD = 123456
